# nginx-tool

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  install.sh
tui-next/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
tui-next/.github/workflows/: ci.yml
tui-next/doc/: architecture.md  changelog.md  design.md  execution.md  optimization-plan.md  risks.md
tui-next/src/: error.rs  main.rs  version.rs
tui-next/src/app/: event.rs  mod.rs  route.rs  state.rs  task.rs
tui-next/src/app/state/: app.rs  backup.rs  certs.rs  common.rs  dashboard.rs  logs.rs  mod.rs  service.rs  site_edit.rs  site_form.rs  sites.rs
tui-next/src/app/state/handlers/: backup.rs  certs.rs  logs.rs  mod.rs  navigation.rs  service.rs  sites.rs
tui-next/src/config/: mod.rs  settings.rs
tui-next/src/domain/: backup.rs  cert.rs  command.rs  config_health.rs  dashboard.rs  log.rs  mod.rs  service.rs  site.rs  update.rs
tui-next/src/infra/: archive.rs  audit.rs  certbot.rs  executor.rs  filesystem.rs  flock.rs  log_tail.rs  mod.rs  nginx.rs  paths.rs  permission.rs  systemd.rs
tui-next/src/template/: config_parser.rs  mod.rs  parser.rs  renderer.rs  snippets.rs
tui-next/src/ui/: cursor.rs  focus.rs  layout.rs  mod.rs  modal.rs  theme.rs  widgets.rs
tui-next/src/ui/views/: backup.rs  certs.rs  dashboard.rs  logs.rs  mod.rs  service.rs  site_edit.rs  site_edit_advanced.rs  site_edit_raw.rs  site_edit_slot_full.rs  site_form.rs  sites.rs
tui-next/templates/: README.md  emby.conf.j2  proxy.conf.j2  static.conf.j2
tui-next/tests/: editor_cursor.rs  smoke.rs
(+11 files in other folders)
