[package]
name = "ngtool"
version = "1.0.4"
edition = "2021"
rust-version = "1.75"
description = "Nginx-Tools TUI - 交互式 Nginx 站点管理工具"
license = "MIT"
publish = false
build = "build.rs"

[[bin]]
name = "ngtool"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync", "time", "signal"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
minijinja = "2"
tui-textarea = "0.7"
walkdir = "2"
regex = "1"
tar = "0.4"
flate2 = "1"
unicode-width = "0.2"
sha2 = "0.10"
nix = { version = "0.29", features = ["fs", "user"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
